# OOP

BackUp/: BackUp.cpp  BackUp.h  CMakeLists.txt  CreationStrategy.h  File.h  FullPoint.h  IncPoint.h  RestorePoint.h  StorageStrategy.h  main.cpp
Banks/: Account.h  Bank.cpp  Bank.h  Builder.h  CMakeLists.txt  Client.cpp  Client.h  ClientBuilder.h  Command.h  CommandTransaction.h  CreditAccount.h  DebitAccount.h  DepositAccount.h  Dispatcher.h  SaveTransaction.h  UndoTransaction.h  main.cpp
Racing/: AirTransport.cpp  AirTransport.h  AllTransport.cpp  AllTransport.h  Boots.cpp  Boots.h  Broom.cpp  Broom.h  CMakeLists.txt  Carpet.cpp  Carpet.h  Centaur.cpp  Centaur.h  LandTransport.cpp  LandTransport.h  MatchingRace.h  SpeedCamel.cpp  SpeedCamel.h  Spoop.cpp  Spoop.h  UsualCamel.cpp  UsualCamel.h  main.cpp
Shops/: CMakeLists.txt  OnlyOneShop.cpp  OnlyOneShop.h  Product.cpp  Product.h  Shops.cpp  Shops.h  main.cpp
selfParserInI/: Fetcher.cpp  Fetcher.h  Parser.cpp  Parser.h  main.cpp
